<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity"
    android:background="@drawable/fondo2">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:background="@color/moradoPrincipal"
            android:textAlignment="center"
            app:menu="@menu/toolbar_menu"
            app:navigationIcon="@drawable/ic_back"
            >

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/app_name"
                android:textAppearance="@style/ToolbarTitleTextAppearance"
                android:textColor="@color/blancoCoalarm"
                android:paddingBottom="8dp"/>

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titulo"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/titulo"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/moradoPrincipal"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:text="@string/placeHolderTitulo"
            android:textColor="@color/grisCoAlarm"
            android:textColorHint="@color/grisCoAlarm"
            android:textColorLink="@color/moradoPrincipal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fecha"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="251dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/fecha"
        app:boxBackgroundMode="outline"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_calendar"
        app:boxStrokeColor="@color/moradoPrincipal"
        app:boxStrokeWidth="1dp"
        tools:ignore="ExtraText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/placeHolder"
            android:inputType="date"
            android:gravity="center_vertical"
            android:textColor="@color/grisCoAlarm"
            android:textColorHint="@color/grisCoAlarm"
            android:textColorLink="@color/moradoPrincipal" />
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hora"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/hora"
        app:boxBackgroundMode="outline"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_hour"
        app:boxStrokeColor="@color/moradoPrincipal"
        app:boxStrokeWidth="1dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/placeHolderHora"
            android:inputType="date"
            android:gravity="center_vertical"
            android:textColor="@color/grisCoAlarm"
            android:textColorHint="@color/grisCoAlarm"
            android:textColorLink="@color/moradoPrincipal" />
        />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/grupo"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="433dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/grupo"
        app:boxBackgroundMode="outline"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_dropdown"
        app:boxStrokeColor="@color/moradoPrincipal"
        app:boxStrokeWidth="1dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteGrupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/placeHolderGrupo"
            android:textColor="@color/grisCoAlarm"
            android:textColorHint="@color/grisCoAlarm"
            android:textColorLink="@color/moradoPrincipal"
            android:focusable="false"
            android:paddingStart="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/frecuencia"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/frecuencia"
        app:boxBackgroundMode="outline"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_dropdown"
        app:boxStrokeColor="@color/moradoPrincipal"
        app:boxStrokeWidth="1dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteFrecuencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/placeHolderFrecuencia"
            android:textColor="@color/grisCoAlarm"
            android:textColorHint="@color/grisCoAlarm"
            android:textColorLink="@color/moradoPrincipal"
            android:focusable="false"
            android:paddingStart="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCreateAlarm"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="630dp"
        android:layout_marginBottom="69dp"
        android:layout_marginStart="131dp"
        android:text="@string/crearAlarma"
        android:textColor="@color/button_text_selector"
        app:backgroundTint="@drawable/button_background_selector"
        app:layout_anchorGravity="center"
        app:strokeColor="@color/moradoPrincipal"
        app:strokeWidth="1dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>