<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity"
    android:background="@drawable/fondo2">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:background="@color/moradoPrincipal"
            android:textAlignment="center"
            app:navigationIcon="@drawable/ic_back"
            app:menu="@menu/toolbar_menu">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/app_name"
                android:textAppearance="@style/ToolbarTitleTextAppearance"
                android:textColor="@color/blancoCoalarm"
                android:paddingBottom="8dp"/>

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titulo"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/nombreGrupo"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/moradoPrincipal"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:text="@string/placeHolderNombreGrupo"
            android:textColor="@color/grisCoAlarm"
            android:textColorHint="@color/grisCoAlarm"
            android:textColorLink="@color/moradoPrincipal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="716dp"
        android:layout_marginBottom="69dp"
        android:layout_marginStart="131dp"
        android:text="@string/crearGrupo"
        android:textColor="@color/white"
        app:backgroundTint="@color/moradoPrincipal"
        app:layout_anchorGravity="center" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="249dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/amigos"
        android:textSize="24dp" />

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="428dp"
        android:orientation="horizontal"
        android:layout_marginStart="48dp"
        android:layout_marginTop="283dp"
        android:background="@color/moradoPrincipal"
        >

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_weight="1"
            android:button="@drawable/rounded_checkbox"
            android:fontFamily="@font/lato"
            android:text=""
            android:textColor="@color/white"
            android:textIsSelectable="false"
            app:buttonCompat="@drawable/rounded_checkbox"
            />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>